--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -25,6 +25,11 @@ single: true
     </p>
   </footer>
 </article>
+{% if site.jiathis_uyan_user %}
+  <section>
+    <h1>Comments</h1>
+  </section>
+{% endif %}
 {% if site.disqus_short_name and page.comments == true %}
   <section>
     <h1>Comments</h1>
