--- a/source/_layouts/tag_index.html
+++ b/source/_layouts/tag_index.html
@@ -1,3 +1,8 @@
+---
+layout: page
+footer: false
+---
+
 <div id="blog-archives" class="category">
 {% for post in site.tags[page.tag] %}
 {% capture this_year %}{{ post.date | date: "%Y" }}{% endcapture %}
