--- a/shugetsu/css/love.css
+++ b/shugetsu/css/love.css
@@ -1,24 +1,37 @@
-.love { height:600px;position:absolute;}
-.love  .left,.right{
-    display:inline-block
+.love {
+    width: 108px;
+    height: 84px;
+    margin: 0 auto;
+}
+.love .lr_f {
+    padding-right: 24px;
+}
+.love .lr_s {
+    padding-right: 12px;
+}
+.love .rr_f {
+    padding-left: 12px;
+}
+.love  .left, .right{
+    display: inline-block;
 }
 .love  .left{
-    width:170px;
-    height:239px;
+    width:60px;
+    height:84px;
     margin-right:-4px
 }
 
 .love  div>div{
     display:block;
-    height:34px;
+    height:12px;
 }
 .love div>div>div{
-    width:30px;
-    height:30px;
+    width:10px;
+    height:10px;
     background-color:red;
     display:inline-block;
     float:right;
-    margin:2px;
+    margin:1px;
 }
 .love div.right>div>div{
     float:left;
