--- a/shugetsu/css/main.css
+++ b/shugetsu/css/main.css
@@ -65,11 +65,10 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-
-
-
-
-
+.wrapper {
+    width: 100%;
+    height: 480px;
+}
 
 
 
