finish the demo

--- a/shugetsu/css/main.css
+++ b/shugetsu/css/main.css
@@ -54,7 +54,7 @@ fieldset {
 }
 
 /*
- * Allow only vertical resizing of textareas.
+ * Allow only vertcal resizing of textareas.
  */
 
 textarea {
