--- a/shugetsu/css/envelope.css
+++ b/shugetsu/css/envelope.css
@@ -41,6 +41,7 @@
     height: 100px;
     width: 200px;
     margin: 0px auto;
+    line-height: 22px;
     padding: 10px;
     border: 1px solid #fff;
     border-radius: 3px;
@@ -56,4 +57,12 @@
     font-size:14px;
     padding: 0;
     margin: 0;
+}
+
+.paper .carrot {
+    width: 50px;
+    height: 50px;
+    background: url(../img/carrot.png) no-repeat;
+    background-size: 50px auto;
+    margin: 5px auto;
 }
