--- a/shugetsu/css/main.css
+++ b/shugetsu/css/main.css
@@ -80,6 +80,15 @@ textarea {
     display: none;
 }
 
+.start {
+    width: 50px;
+    height: 50px;
+    background: url(../img/start.png) no-repeat;
+    background-size: 50px;
+    margin: 0 auto;
+    margin-top:225px;
+}
+
 .lantern {
     width: 300px;
     margin:0 auto;
