--- a/event/20150115/css/main.css
+++ b/event/20150115/css/main.css
@@ -146,7 +146,7 @@ a:hover {
 .page {
     position: relative;
     width: 100%;
-    height: 6.35rem;
+    /*height: 6.35rem;*/
     z-index: 1;
     background: url(../images/bg.png) no-repeat;
     background-size: 100% auto;
